syntax = "proto3";

package executors.v1.plan.v1;

import "executors/v1/plan/v1/metadata.proto";
import "executors/v1/plan/v1/terraform_run_type.proto";
import "google/protobuf/struct.proto";
import "tagger/tagger.proto";
import "validate/validate.proto";

message TerraformPlan {
  .executors.v1.plan.v1.Metadata metadata = 1;
  string id = 2;
  Object module = 3;
  Object backend = 4;
  google.protobuf.Struct vars = 5;
  .executors.v1.plan.v1.TerraformRunType run_type = 6;
  map<string, Object> outputs = 7;
  string terraform_version = 8;
}

message Object {
  string bucket = 1 [
    (validate.rules).string.min_len = 1,
    (tagger.tags) = "faker:\"len=10\""
  ];

  string key = 2 [(validate.rules).string.min_bytes = 1];

  string region = 3;

  AssumeRoleDetails assume_role_details = 4;
}

message AssumeRoleDetails {
  string assume_arn = 1 [
    (validate.rules).string.min_len = 20,
    (tagger.tags) = "faker:\"len=25\""
  ];
}
